# SPSC_Queue

./: .clang-format  .gitignore  ARTIFACT.md  CMakeLists.txt  LICENSE  README.md  requirements-paper.txt
.github/workflows/: ci.yml  study-matrix.yml
benchmarks/: CMakeLists.txt  bench_batch.cpp  bench_cached_index.cpp  bench_common.hpp  bench_false_sharing.cpp  bench_latency.cpp  bench_mpmc.cpp  bench_throughput.cpp  bench_vs_libs.cpp  bench_vs_mutex.cpp
demo/: CMakeLists.txt  README.md  audio_demo.cpp  marketdata_demo.cpp
include/mpmc/: ebr.hpp  faa_queue.hpp  ms_queue.hpp  vyukov_queue.hpp
include/spsc/: spsc_queue.hpp
paper/: README.md  main.tex  refs.bib
paper/data/: matrix_h3.csv  matrix_h3s.csv  matrix_ind.csv  matrix_load.csv  matrix_load2.csv  matrix_power.csv  matrix_thermal.csv  matrix_v1.csv  matrix_v2.csv  matrix_v3.csv  matrix_v3s.csv  summary_h3.md  summary_h3s.md  summary_ind.md  summary_load.md  summary_loadfull.md  summary_power.md  summary_v1.md  summary_v2.md  summary_v3.md  summary_v3s.md
paper/notes/: claims.md  related-work.md  venues.md
scripts/: bootstrap_ci.py  dataset_utils.py  make_plots.py  plot_thermal.py  reproduce.sh  run_matrix.py  run_power.py  run_thermal.py  verify_claims.py  write_manifest.py
tests/: CMakeLists.txt  test_basic.cpp  test_mpmc_basic.cpp  test_mpmc_stress.cpp  test_stress.cpp  test_util.hpp
